--- a/T-POO-700-T2/miniproj/src/css/User/sign.css
+++ b/T-POO-700-T2/miniproj/src/css/User/sign.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Numans');
 
-*body {
+body {
   background-image: url('../../assets/gotham_city.jpg');/* url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg'); */
   background-size: cover;
   background-repeat: no-repeat;
